==> MikroElektronika/mikrosdk_v2/targets/arm/mikroe/ai_generated/stm32/src/tim/implementations/doc_ds_81/hal_ll_tim.c <==
#include "hal_ll_gpio.h"
#include "hal_ll_rcc.h"
#include "hal_ll_tim.h"
#include "hal_ll_tim_pin_map.h"
#define HAL_LL_TIM_ENABLE_COUNTER_BIT        0
#define HAL_LL_TIM_BDTR_MOE_BIT              15
#define HAL_LL_TIM_BDTR_MOE                  0x8000
#define HAL_LL_TIM_CCMR_CC2S_BIT0            0x100u
#define HAL_LL_TIM_CCMR_CC2S_BIT1            0x200u
#define HAL_LL_TIM_CCMR_OC2PE                0x800u
#define HAL_LL_TIM_CCMR_OC2M_BIT0            0x1000u
#define HAL_LL_TIM_CCMR_OC2M_BIT1            0x2000u
#define HAL_LL_TIM_CCMR_OC2M_BIT2            0x4000u
#define HAL_LL_TIM_CCMR_CC3S_BIT0            0x1u
#define HAL_LL_TIM_CCMR_CC3S_BIT1            0x2u
#define HAL_LL_TIM_CCMR_OC3PE                0x8u
#define HAL_LL_TIM_CCMR_OC3M_BIT0            0x10u
#define HAL_LL_TIM_CCMR_OC3M_BIT1            0x20u
#define HAL_LL_TIM_CCMR_OC3M_BIT2            0x40u
#define HAL_LL_TIM_CR1_DIR                   0x10
#define HAL_LL_TIM_CR1_DIR_BIT               4
#define HAL_LL_TIM_ENABLE_1                 11
#define HAL_LL_TIM_ENABLE_2                 0
#define HAL_LL_TIM_ENABLE_3                 1
#define HAL_LL_TIM_ENABLE_4                 2
#define HAL_LL_TIM_ENABLE_14                 15
#define HAL_LL_TIM_ENABLE_15                 16
#define HAL_LL_TIM_ENABLE_16                 17
#define HAL_LL_TIM_ENABLE_17                 18
#define HAL_LL_APB1_TIMER_CLOCK              1
#define hal_ll_tim_channel_static( _chn )    ( _chn-1 )

hal_ll_err_t hal_ll_tim_register_handle( hal_ll_pin_name_t pin, hal_ll_tim_handle_register_t *handle_map,
                                                                uint8_t *hal_module_id ) {

    uint8_t index;
    uint16_t pin_check_result;

    if ( ( pin_check_result = _hal_ll_tim_check_pin( pin, &index, handle_map ) ) == HAL_LL_PIN_NC ) {
        return HAL_LL_TIM_WRONG_PIN;
    }

    if ( hal_ll_tim_hw_specifics_map[ pin_check_result ].config.pin != pin ){
        // Clear previous module alternate functions
        _hal_ll_tim_alternate_functions_set_state( &hal_ll_tim_hw_specifics_map[ pin_check_result ], false );

        _hal_ll_tim_map_pin( pin_check_result, index );

        _hal_ll_tim_alternate_functions_set_state( &hal_ll_tim_hw_specifics_map[ pin_check_result ], true );

        handle_map[ pin_check_result ].init_ll_state = false;

        hal_ll_module_state[ pin_check_result ].init_ll_state = false;

    }

    *hal_module_id = pin_check_result;

    hal_ll_module_state[ pin_check_result ].hal_ll_tim_handle = ( handle_t * )&hal_ll_tim_hw_specifics_map[ pin_check_result ].base;

    handle_map[ pin_check_result ].hal_ll_tim_handle = ( handle_t *)&hal_ll_module_state[ pin_check_result ].hal_ll_tim_handle;

    return HAL_LL_TIM_SUCCESS;
}

hal_ll_err_t hal_ll_tim_set_duty( handle_t *handle, float duty_ratio ) {

    float    tmp_duty;
    uint32_t max_duty = 0;
    uint16_t max_period;

    low_level_handle = hal_ll_tim_get_handle;
    hal_ll_tim_hw_specifics_map_local = hal_ll_get_specifics( hal_ll_tim_get_module_state_address );

    hal_ll_tim_base_handle_t *hal_ll_hw_reg = hal_ll_tim_get_base_struct( hal_ll_tim_hw_specifics_map_local->base );

    if ( low_level_handle->init_ll_state == false ) {
        hal_ll_tim_start( handle );
        low_level_handle->init_ll_state = true;
    }

    tmp_duty = duty_ratio * 100;
    max_period = hal_ll_tim_hw_specifics_map_local->max_period;

    max_duty = ( ( float )max_period / 100 ) * tmp_duty;

    *( &hal_ll_hw_reg->ccr1 + hal_ll_tim_channel_static( hal_ll_tim_hw_specifics_map_local->config.channel ) ) = max_duty;

    return HAL_LL_TIM_SUCCESS;
}

hal_ll_err_t hal_ll_tim_start( handle_t *handle ) {

    uint32_t tmp_channel;
    volatile uint32_t  tmp,
                       *tmpPtr;

    low_level_handle = hal_ll_tim_get_handle;
    hal_ll_tim_hw_specifics_map_local = hal_ll_get_specifics( hal_ll_tim_get_module_state_address );

    hal_ll_tim_base_handle_t *hal_ll_hw_reg = hal_ll_tim_get_base_struct( hal_ll_tim_hw_specifics_map_local->base );

    tmp_channel = hal_ll_tim_hw_specifics_map_local->config.channel;

    // Capture/Compare 1 output enable.
    tmp = hal_ll_hw_reg->ccer;

    // If complementary output channel is used.
    if ( HAL_LL_TIM_IS_COMPLEMENTARY ) {
        // Capture/Compare complementary output enable
        tmp |=  ( 1UL << ( hal_ll_tim_channel_static( tmp_channel ) * 4 + 2 ) );
        // Capture/Compare complementary output polarity(ACTIVE HIGH).
        tmp &= ~( 1UL << ( hal_ll_tim_channel_static( tmp_channel ) * 4 + 3 ) );
    } else {
        // Capture/Compare output polarity.
        tmp |=  ( 1UL << ( hal_ll_tim_channel_static( tmp_channel ) * 4 ) );
        // Capture/Compare output polarity(ACTIVE HIGH).
        tmp &= ~( 1UL << ( hal_ll_tim_channel_static( tmp_channel ) * 4 + 1 ) );
    }

    hal_ll_hw_reg->ccer = tmp;

    #if defined(TIM_MODULE_1) || defined(TIM_MODULE_8) || defined(TIM_MODULE_20)
    // Main output enabled.
    set_reg_bit( &hal_ll_hw_reg->bdtr, HAL_LL_TIM_BDTR_MOE_BIT );
    #endif

    tmpPtr = &hal_ll_hw_reg->ccmr1;

    if( hal_ll_tim_channel_static( tmp_channel ) > 1 ) {
        tmpPtr = &hal_ll_hw_reg->ccmr2;
    }

    if( ( hal_ll_tim_channel_static( tmp_channel ) / 2 ) * 2 !=
          hal_ll_tim_channel_static( tmp_channel ) ) {
        // Clear CCxS, OCxM[0].
        *tmpPtr &= ~( HAL_LL_TIM_CCMR_CC2S_BIT0 |
                      HAL_LL_TIM_CCMR_CC2S_BIT1 |
                      HAL_LL_TIM_CCMR_OC2PE |
                      HAL_LL_TIM_CCMR_OC2M_BIT0 );
        // Set OCxM[2, 1]
        *tmpPtr |= HAL_LL_TIM_CCMR_OC2M_BIT1 | HAL_LL_TIM_CCMR_OC2M_BIT2;
    } else {
        // Clear CCxS, OCxM[0].
        *tmpPtr &= ~( HAL_LL_TIM_CCMR_CC3S_BIT0 |
                      HAL_LL_TIM_CCMR_CC3S_BIT1 |
                      HAL_LL_TIM_CCMR_OC3PE |
                      HAL_LL_TIM_CCMR_OC3M_BIT0 );

        // Set OCxM[2, 1].
        *tmpPtr |=  HAL_LL_TIM_CCMR_OC3M_BIT1 | HAL_LL_TIM_CCMR_OC3M_BIT2;
    }

    // Enable counter.
    set_reg_bit( &hal_ll_hw_reg->cr1, HAL_LL_TIM_ENABLE_COUNTER_BIT );

    return HAL_LL_TIM_SUCCESS;
}

void hal_ll_tim_close( handle_t *handle ) {

    low_level_handle = hal_ll_tim_get_handle;
    hal_ll_tim_hw_specifics_map_local = hal_ll_get_specifics(hal_ll_tim_get_module_state_address);

    if( low_level_handle->hal_ll_tim_handle != NULL ) {
        low_level_handle->hal_ll_tim_handle = NULL;
        low_level_handle->hal_drv_tim_handle = NULL;

        low_level_handle->init_ll_state = false;

        hal_ll_tim_hw_specifics_map_local->max_period = 0;
        hal_ll_tim_hw_specifics_map_local->freq_hz = 0;

        _hal_ll_tim_set_clock( hal_ll_tim_hw_specifics_map_local->base, true );
        _hal_ll_tim_alternate_functions_set_state( hal_ll_tim_hw_specifics_map_local, false );
        _hal_ll_tim_set_clock( hal_ll_tim_hw_specifics_map_local->base, false );

        hal_ll_tim_hw_specifics_map_local->config.pin = HAL_LL_PIN_NC;
        hal_ll_tim_hw_specifics_map_local->config.channel = HAL_LL_PIN_NC;
        hal_ll_tim_hw_specifics_map_local->config.af = NULL;
    }
}

static void _hal_ll_tim_map_pin( uint8_t module_index, uint8_t index ) {

    uint8_t tmp_channel;

    // Map new pin
    hal_ll_tim_hw_specifics_map[ module_index ].config.pin = _tim_map[ index ].pin;
    tmp_channel = _tim_map[ index ].channel;
    hal_ll_tim_hw_specifics_map[ module_index ].config.af = _tim_map[ index ].af;

    if ( tmp_channel >= HAL_LL_TIM_CHANNEL_1N ) {
        HAL_LL_TIM_IS_COMPLEMENTARY = true;
        hal_ll_tim_hw_specifics_map[ module_index ].config.channel = tmp_channel - 4;
    } else {
        HAL_LL_TIM_IS_COMPLEMENTARY = false;
        hal_ll_tim_hw_specifics_map[ module_index ].config.channel = tmp_channel;
    }
}

static void _hal_ll_tim_alternate_functions_set_state( hal_ll_tim_hw_specifics_map_t *map, bool hal_ll_state ) {

    module_struct module;
    uint32_t      tim_config = 0;

    if( map->config.pin != HAL_LL_PIN_NC ) {
        if( hal_ll_state == false ) {
            tim_config = GPIO_CFG_MODE_ALT_FUNCTION |
                         GPIO_CFG_SPEED_LOW |
                         GPIO_CFG_OTYPE_PP;
        } else {
            tim_config = GPIO_CFG_MODE_ALT_FUNCTION |
                         GPIO_CFG_SPEED_HIGH |
                         GPIO_CFG_OTYPE_PP;
        }

        module.pins[ 0 ] = VALUE( map->config.pin, map->config.af );
        module.pins[ 1 ] = GPIO_MODULE_STRUCT_END;

        module.configs[ 0 ] = tim_config;
        module.configs[ 1 ] = GPIO_MODULE_STRUCT_END;

        hal_ll_gpio_module_struct_init( &module, hal_ll_state );
    }
}

static void _hal_ll_tim_hw_init( hal_ll_tim_hw_specifics_map_t *map ) {

    uint32_t  ck_psc;

    hal_ll_tim_base_handle_t *hal_ll_hw_reg = hal_ll_tim_get_base_struct( map->base );

    // Counter used as upcounter.
    clear_reg_bit( &hal_ll_hw_reg->cr1, HAL_LL_TIM_CR1_DIR_BIT );

    // Get clock speed.
    ck_psc = _hal_ll_tim_get_clock_speed( map->base ) / map->freq_hz;

    // This should not be the case. ck_psc should not be greater than 65535, which is max value.
    if( ck_psc > UINT16_MAX ) {
        // In case of duty period beeing greater than 65535 set ck_psc to max value.
        ck_psc = UINT16_MAX - 1; // Because of ( ck_psc / UINT16_MAX + 1 ) ), has to be minus 1.
    }else if ( ck_psc < 1 ) {
        ck_psc = 1;
    }

    // Write prescale value.
    hal_ll_hw_reg->psc = ( uint16_t )( ck_psc / UINT16_MAX );

    // Write max count value.
    hal_ll_hw_reg->arr = ( uint16_t )( ck_psc/( ck_psc / UINT16_MAX + 1 ) );

    // Write max period to global array.
    map->max_period = ( uint16_t )ck_psc;
}

static void _hal_ll_tim_init( hal_ll_tim_hw_specifics_map_t *map ) {

    _hal_ll_tim_set_clock( map->base, true );

    _hal_ll_tim_alternate_functions_set_state( map, true );

    _hal_ll_tim_hw_init( map );
}
